	   default_project_win32.jrpj

	* hardcoded platform dependant packages in fts_platform_init

	* rename client_pipe_install into exported fts_client_pipe_start

	* rename client_tcp_manager_install into exported fts_client_tcp_start

	* move pipe connection test from fts_client_config (jmax/fts/client.c) to fts_init (jmax/fts/fts.c)

	* merge fts_kernel_init and fts_kernel_classes_config

	
2003-02-04  Diemo Schwarz  <schwarz@ligeti.ircam.fr>

	* play~ understands start message, for consistency with play.
	  Updated help.

	* sequence package changes by Norbert, Riccardo, Diemo:
	Removed spurious "A track with this name already exist!" message.
	Editors	update track/sequence name in window.
	Fixed bug with track persistence -> no more crash on loading saved tracks.
	Added track_highlight_* functions.
	Added message "start" for play object.
	Locate message does not play immediately, but displays position
	using new track_highlight_time function.
	Updated help.


2003-02-04  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* add command line arguments for project and AUDIO/MIDI configuration files

2003-01-30  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* changed all "Authors:..." and "Based on MAX/ISPW" in all files.

	* changed the GUI for project/configuration editing. The configuration editor
	is now accessed via the "Project" menu, with the same functionalities as the project
	editor.
	Added a first ebauch of a generic file loader in FTS. But this requires too much work
	in order to be able to replace "Open project", "Open configuration" and "Open package"
	by the "Open" of the file menu.

2003-01-30  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* add load of AUDIO/MIDI configuration file at startup

2003-01-29  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* make adc~/dac~ aliases to input~/monitor~

2003-01-23  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* rename default project files:
	    config.jprj -> default_project.jprj